# nonebot-plugin-bf1marneserverlist

./: .env.prod  .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
marne_data/: 1006447496.json
nonebot_plugin_bf1marneserverlist/: __init__.py  config.py
nonebot_plugin_bf1marneserverlist/plugins/: __init__.py  config.py  utils.py
nonebot_plugin_marneserverlist/plugins/: utils.py
plugins/bf1marneserverlist/: __init__.py
