[tool.poetry]
authors = ["safeluren"]
name = "nonebot-plugin-bf1marneserverlist"
version = "0.1.8"
description = "nonebot-plugin-bf1marneserverlist"
readme = "README.md"
packages = [{include = "bf1marneserverlist"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.2.0"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
