[tool.poetry]
authors = ["safeluren"]
name = "nonebot-plugin-bf1marneserverlist"
version = "0.1.11"
description = "nonebot-plugin-bf1marneserverlist"
readme = "README.md"
packages = [{include = "nonebot_plugin_bf1marneserverlist"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.2.0"
nonebot-adapter-onebot = "^2.4.0"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
